force-app/main/default/objects/Quant__User_History__c/Quant__User_History__c.object-meta.xml
<CustomObject>
    <label>User History</label>
    <nameField>
        <label>User Tracking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>usertrackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>