force-app/main/default/objects/Quant__User_History__c/fields/Quant__Field_Updated__c.field-meta.xml
<CustomField>
    <fullName>Quant__Field_Updated__c</fullName>
    <label>Field Updated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>