force-app/main/default/objects/Quant__User_History__c/fields/Quant__New_Value__c.field-meta.xml
<CustomField>
    <fullName>Quant__New_Value__c</fullName>
    <label>New Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>