force-app/main/default/objects/Quant__User_History__c/fields/Quant__Updating_User_Info__c.field-meta.xml
<CustomField>
    <fullName>Quant__Updating_User_Info__c</fullName>
    <label>Updating User Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>