force-app/main/default/objects/Quant__User_History__c/fields/Quant__Which_User_s_History__c.field-meta.xml
<CustomField>
    <fullName>Quant__Which_User_s_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Which User&apos;s History</label>
    <referenceTo>User</referenceTo>
    <relationshipName>usertrackings1</relationshipName>
    <type>Lookup</type>
</CustomField>