force-app/main/default/objects/Quant__User_History__c/listViews/Quant__All.listView-meta.xml
<ListView>
    <fullName>Quant__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>